# lkhu

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml  test.yml
docs/: api-reference.md  architecture.md  auto-memory.md  comparison.md  evaluation.md  faq.md  index.md  neuroscience.md  storage.md  vsa-explained.md
docs/installation/: linux.md  macos.md  windows.md
examples/: basic_usage.py  claude_desktop_config.json
plugins/lkhu/: README.md
plugins/lkhu/.claude-plugin/: plugin.json
plugins/lkhu/hooks/: hooks.json
src/lkhu/: __init__.py  __main__.py  cli.py
src/lkhu/config/: __init__.py  defaults.yaml  loader.py
src/lkhu/core/: __init__.py  audit.py  codebook.py  consolidator.py  decay.py  decoder.py  encoder.py  engine.py  glymphatic.py  long_term.py  memory.py  metrics.py  recall.py  short_term.py  vsa.py  working_memory.py
src/lkhu/eval/: __init__.py  corpus.py  harness.py
src/lkhu/platform/: __init__.py  claude_code.py  claude_hooks.py  mcp_config.py  ollama.py  paths.py  scheduler.py  setup.py
src/lkhu/server/: __init__.py  client.py  daemon.py  dashboard.py  hooks.py  mcp.py  tools.py
tests/integration/: test_daemon.py  test_dedup_lifecycle.py  test_hooks.py  test_mcp_e2e.py  test_recall_decode.py  test_setup.py
tests/platform/: test_claude_code.py  test_claude_hooks.py  test_mcp_config.py  test_ollama.py  test_paths.py  test_scheduler.py
tests/unit/: test_cli.py  test_codebook.py  test_config_loader.py  test_decoder.py  test_encoder.py  test_eval_harness.py  test_lifecycle.py  test_long_term.py  test_quality.py  test_recall.py  test_storage_aux.py  test_vsa.py
